<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>deepracer_core</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="m.reza.ramezani8@gmail.com">redha</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>geometry_msgs</test_depend>
  <test_depend>nav_msgs</test_depend>
  <test_depend>sensor_msgs</test_depend>
  <test_depend>tf2_geometry_msgs</test_depend>
  <test_depend>tf2_ros</test_depend>
  <test_depend>deepracer_interfaces_pkg</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
